--- a/index.ipynb
+++ b/index.ipynb
@@ -54,12 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_month = None\n",
-    "travel_month = \"\"\n"
+    "travel_month = \"January\"\n",
+    "number\n"
    ]
   },
   {
