--- a/index.ipynb
+++ b/index.ipynb
@@ -72,23 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'January'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "travel_month # \"January\"\n",
-    "number_of_"
+    "number_of_weeks = 3\n",
+    "\n"
    ]
   },
   {
