Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,12 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_month # \"January\"\n",
     "number_of_weeks = 3\n",
+    "travel_month \n",
     "\n"
    ]
   },
