--- a/index.ipynb
+++ b/index.ipynb
@@ -72,15 +72,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_month # \"January\"\n",
     "number_of_weeks = 3\n",
     "travel_month = \"January\"\n",
-    "trave\n",
-    "\n",
+    "travel_month\n",
+    "number\n",
     "\n"
    ]
   },
