--- a/index.ipynb
+++ b/index.ipynb
@@ -72,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'January'"
+       "3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,8 @@
     "number_of_weeks = 3\n",
     "travel_month = \"January\"\n",
     "travel_month\n",
-    "number\n",
+    "number_of_weeks\n",
+    "\n",
     "\n"
    ]
   },
