Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,7 @@
     "number_of_weeks = 3\n",
     "travel_month = \"January\"\n",
     "travel_month\n",
-    "number_of_weeks\n",
+    "number_of_weeks - \n",
     "\n",
     "\n"
    ]
