Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,27 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "travel_month # \"January\"\n",
     "number_of_weeks = 3\n",
     "travel_month = \"January\"\n",
     "travel_month\n",
-    "number_of_weeks - \n",
-    "\n",
+    "number_of_weeks = \"4\"\n",
+    "number_of\n",
     "\n"
    ]
   },
