Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,8 @@
     "travel_month = \"January\"\n",
     "travel_month\n",
     "number_of_weeks = \"4\"\n",
-    "number_of\n",
+    "number_of_weeks = \"5\"\n",
+    "num\n",
     "\n"
    ]
   },
